update for a push

--- a/Sources/jedis-night/index.html
+++ b/Sources/jedis-night/index.html
@@ -9,5 +9,9 @@
    <h1>Pascal !</h1> 
 
    <div>we are in the master</div>
+
+   <div>
+    <h2>update before git push</h2>
+   </div>
 </body>
 </html>
